--- a/hotel-web/src/main/resources/templates/rooms.html
+++ b/hotel-web/src/main/resources/templates/rooms.html
@@ -96,7 +96,7 @@
                                     <span>Pool</span>
                                 </div>
                             </div>
-                            <a href="#" class="primary-btn">ĐẶT PHÒNG NGAY <i class="lnr lnr-arrow-right"></i></a>
+                            <a th:href="@{/bookingRoom/(id=${r.chamberId})}" class="primary-btn">ĐẶT PHÒNG NGAY <i class="lnr lnr-arrow-right"></i></a>
                         </div>
                     </div>
                 </div>
