--- a/hotel-webadmin/src/main/resources/templates/check-in.html
+++ b/hotel-webadmin/src/main/resources/templates/check-in.html
@@ -5,7 +5,7 @@
 <body>
 <div class="super_container">
     <div th:replace="~{starter::header(1)}"></div>
-    <div class="container" style="margin-top: 350px; margin-bottom: 50px">
+    <div class="container" style="margin-top: 150px; margin-bottom: 50px">
         <div class="row">
             <div class="col-md-2">
                 <div class="chamber-filter">
@@ -15,7 +15,7 @@
                                 th:href="@{/check-in(p=1,t=${currentType},v=${currentVip})}">
                             <input type="radio" class="form-check-input" name="price"
                                    th:attr="checked=${checkPrice1}"
-                                   onclick="javascript: return false;">Dưới 1tr
+                                   onclick="javascript: return false;">Dưới 1 triệu
                         </a>
                         </label>
                     </div>
@@ -24,7 +24,7 @@
                                 th:href="@{/check-in(p=2,t=${currentType},v=${currentVip})}">
                             <input type="radio" class="form-check-input" name="price"
                                    th:attr="checked=${checkPrice2}"
-                                   onclick="javascript: return false;">Từ 1tr đến 3tr
+                                   onclick="javascript: return false;">Từ 1 - 3 triệu
                         </a>
                         </label>
                     </div>
@@ -33,7 +33,7 @@
                                 th:href="@{/check-in(p=3,t=${currentType},v=${currentVip})}">
                             <input type="radio" class="form-check-input" name="price"
                                    th:attr="checked=${checkPrice3}"
-                                   onclick="javascript: return false;">Trên 3tr
+                                   onclick="javascript: return false;">Trên 3 triệu
                         </a>
                         </label>
                     </div>
