--- a/hotel-webadmin/src/main/resources/templates/order.html
+++ b/hotel-webadmin/src/main/resources/templates/order.html
@@ -20,7 +20,7 @@ h2, h3 {
 	<div class="super_container">
 		<div th:replace="~{starter::header(3)}"></div>
 		<div th:replace="~{starter::header_content}"></div>
-		<div class="container" style="margin-top: 350px; margin-bottom: 50px;">
+		<div class="container" style="margin-top: 150px; margin-bottom: 50px">
 			<div class="row" style="padding: 20px">
 				<ul class="nav nav-tabs" style="font-weight: bold;">
 					<li class="nav-item"><a class="nav-link active" href="#"
