--- a/hotel-web/src/main/resources/templates/login.html
+++ b/hotel-web/src/main/resources/templates/login.html
@@ -54,6 +54,7 @@
                                     <div class="input-group">
                                         <input type="text" placeholder="username" th:field="*{email}">
                                         <img th:src="@{/img/edit.png}" alt="">
+                                        <span class="mt-3 text-danger" th:if="${#fields.hasErrors('email')}" th:errors="*{email}"></span>
                                     </div>
                                 </div>
                                 <div class="col-lg-12">
@@ -61,6 +62,7 @@
                                     <div class="input-group">
                                         <input type="password" placeholder="password" th:field="*{password}">
                                         <img th:src="@{/img/edit.png}" alt="">
+                                        <span class="mt-3 text-danger" th:if="${#fields.hasErrors('password')}" th:errors="*{password}"></span>
                                     </div>
                                 </div>
                                 <div class="col-lg-12 mt-3">
