--- a/hotel-web/src/main/resources/templates/register.html
+++ b/hotel-web/src/main/resources/templates/register.html
@@ -54,6 +54,7 @@
                                     <div class="input-group">
                                         <input type="text" placeholder="full name" th:field="*{name}">
                                         <img th:src="@{/img/edit.png}" alt="">
+                                        <span class="mt-3 text-danger" th:if="${#fields.hasErrors('name')}" th:errors="*{name}"></span>
                                     </div>
                                 </div>
                                 <div class="col-lg-12">
@@ -61,6 +62,7 @@
                                     <div class="input-group">
                                         <input type="number" placeholder="phone" th:field="*{phone}">
                                         <img th:src="@{/img/edit.png}" alt="">
+                                        <span class="mt-3 text-danger" th:if="${#fields.hasErrors('phone')}" th:errors="*{phone}"></span>
                                     </div>
                                 </div>
                                 <div class="col-lg-12">
@@ -68,6 +70,7 @@
                                     <div class="input-group">
                                         <input type="email" placeholder="email" th:field="*{email}">
                                         <img th:src="@{/img/edit.png}" alt="">
+                                        <span class="mt-3 text-danger" th:if="${#fields.hasErrors('email')}" th:errors="*{email}"></span>
                                     </div>
                                 </div>
                                 <div class="col-lg-12">
@@ -75,6 +78,7 @@
                                     <div class="input-group">
                                         <input type="password" placeholder="password" th:field="*{password}">
                                         <img th:src="@{/img/edit.png}" alt="">
+                                        <span class="mt-3 text-danger" th:if="${#fields.hasErrors('password')}" th:errors="*{password}"></span>
                                     </div>
                                 </div>
                                 <div class="col-lg-12 mt-3">
